# cmake-basic-qmake

./: CMakeLists.txt
simple-qmake-project/: main.cpp  simple_qt.pro
